--- a/Contact.html
+++ b/Contact.html
@@ -30,7 +30,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-clearfix u-custom-color-3 u-header u-header" id="sec-b4b0"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="783" data-image-height="832">
+        <a href="Home.html" data-page-id="271598478" class="u-image u-logo u-image-1" data-image-width="783" data-image-height="832" title="Home">
           <img src="images/Logo_Eductr-removebg.png" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-custom-font u-text u-text-default u-text-1">Sustainability made easy</p>
@@ -86,7 +86,7 @@
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-color-3 u-footer" id="sec-18aa"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="mailto:yesme@eductr.com" class="u-border-none u-btn u-btn-rectangle u-button-style u-custom-color-5 u-custom-font u-font-roboto u-btn-1">contact us</a>
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="783" data-image-height="832">
+        <a href="Home.html" data-page-id="271598478" class="u-image u-logo u-image-1" data-image-width="783" data-image-height="832" title="Home">
           <img src="images/Logo_Eductr-removebg.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
