--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-clearfix u-custom-color-3 u-header u-header" id="sec-b4b0"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="783" data-image-height="832">
+        <a href="Home.html" data-page-id="271598478" class="u-image u-logo u-image-1" data-image-width="783" data-image-height="832" title="Home">
           <img src="images/Logo_Eductr-removebg.png" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-custom-font u-text u-text-default u-text-1">Sustainability made easy</p>
@@ -117,8 +117,9 @@ targeted towards corporate clients and CSR Initiatives working with youths.
               <div class="u-layout-col">
                 <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-size-25 u-uploaded-video u-image-2" data-image-width="6000" data-image-height="4000">
                   <div class="u-container-layout u-container-layout-3">
-                    <h2 class="u-text u-text-white u-text-4">Our Team</h2>
-                    <p class="u-custom-font u-font-roboto u-text u-text-white u-text-5">Our team is made up of young, energetic individuals who focus on spreading awareness on sustainable practices that can be implement in everyday life.</p>
+                    <h2 class="u-text u-text-body-alt-color u-text-4">Our Team</h2>
+                    <p class="u-custom-font u-font-roboto u-text u-text-body-alt-color u-text-5">Our team is made up of young, energetic individuals who <span style="font-weight: 700;" class="u-text-black">focus on spreading awareness</span> on sustainable practices that can be implement in everyday life.
+                    </p>
                     <div class="u-social-icons u-spacing-10 u-social-icons-1">
                       <a class="u-social-url" target="_blank" href=""><span class="u-icon u-icon-circle u-social-facebook u-social-icon u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-7cd9"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-7cd9"><path d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2 c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
                       </a>
@@ -269,7 +270,7 @@ meeting where a quote will be provided.</p>
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-color-3 u-footer" id="sec-18aa"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="mailto:yesme@eductr.com" class="u-border-none u-btn u-btn-rectangle u-button-style u-custom-color-5 u-custom-font u-font-roboto u-btn-1">contact us</a>
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="783" data-image-height="832">
+        <a href="Home.html" data-page-id="271598478" class="u-image u-logo u-image-1" data-image-width="783" data-image-height="832" title="Home">
           <img src="images/Logo_Eductr-removebg.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
